@@ -36,6 +36,7 @@ d9e50ff2d19b3538bd2127902a89987474e1a4db8e43a66a4d1a712ab9a504ff  expat-2.2.0.ta
 d9dc32efba7e74f788fcc4f212a43216fc37cf5f23f4c2339664d473353aedf6  expat-2.2.5.tar.bz2
 17b43c2716d521369f82fc2dc70f359860e90fa440bea65b3b85f0b246ea81f2  expat-2.2.6.tar.bz2
 f1063084dc4302a427dabcca499c8312b3a32a29b7d2506653ecc8f950a9a237  expat-2.2.9.tar.bz2
+a1e85abcd97c2aa71005190d24a7c46dcf7bd29c097c31e917cda1b400c38a49  expat-2.2.9.tar.lz
 216900d5c0af9017bb8f76b0ad23f0ac53cf7fc618cf04b40d989bd99b088e6a  ffmpeg-3.3.2.tar.bz2
 f3443e20154a590ab8a9eef7bc951e8731425efc75b44ff4bee31d8a7a574a2c  ffmpeg-3.4.1.tar.bz2
 eb0370bf223809b9ebb359fed5318f826ac038ce77933b3afd55ab1a0a21785a  ffmpeg-3.4.2.tar.bz2
