@@ -6,6 +6,7 @@
   Cache directory is common for all systems: <LXE dir>/ccache
   Common ccache config: <LXE dir>/ccache/ccache.conf
 * Package libxkbcommon: add ability to build static library.
+* Package expat: fix download URL after changes in upstream.
 * Fix build with GCC 10 and newer packages: make, glibc, gcc, linux-headers.
 * Remove old configs for some unsupported systems:
   - МСВС-3.0-80001-12_shared.sh
